--- a/package.json
+++ b/package.json
@@ -1,207 +1,42 @@
 {
-  "name": "blockchain-wallet-v4",
-  "version": "4.37.0",
-  "license": "AGPL-3.0-or-later",
-  "private": true,
-  "author": {
-    "name": "Blockchain",
-    "url": "https://blockchain.com"
+  "name": "blockchain-wallet-v4-frontend",
+  "version": "1.0.1",
+  "description": "[![Build Status](https://travis-ci.org/blockchain/blockchain-wallet-v4-frontend.svg?branch=master)](https://travis-ci.org/blockchain/blockchain-wallet-v4-frontend) [![js-standard-style](https://img.shields.io/badge/code%20style-standard-brightgreen.svg)](http://standardjs.com) [![Known Vulnerabilities](https://snyk.io/test/github/blockchain/blockchain-wallet-v4-frontend/badge.svg?targetFile=packages%2Fblockchain-wallet-v4-frontend%2Fpackage.json)](https://snyk.io/test/github/blockchain/blockchain-wallet-v4-frontend?targetFile=packages%2Fblockchain-wallet-v4-frontend%2Fpackage.json) [![code style: prettier](https://img.shields.io/badge/code_style-prettier-ff69b4.svg?style=flat-square)](https://github.com/prettier/prettier) [![License: AGPL v3](https://img.shields.io/badge/License-AGPL%20v3-blue.svg)](https://www.gnu.org/licenses/agpl-3.0) [![Codechecks](https://raw.githubusercontent.com/codechecks/docs/master/images/badges/badge-default.svg?sanitize=true)](https://codechecks.io)",
+  "main": "babel.config.js",
+  "directories": {
+    "lib": "lib"
   },
-  "homepage": "https://github.com/blockchain/blockchain-wallet-v4-frontend",
-  "bugs": {
-    "url": "https://github.com/blockchain/blockchain-wallet-v4-frontend/issues"
+  "dependencies": {
+    "bin": "^0.0.0",
+    "build": "^0.1.4",
+    "cache": "^2.3.1",
+    "check": "^1.0.0",
+    "config": "^3.3.3",
+    "global": "^4.4.0",
+    "info": "^0.0.6-beta.0",
+    "install": "^0.13.0",
+    "licenses": "^0.0.20",
+    "list": "^2.0.19",
+    "node": "^15.8.0",
+    "policies": "^1.0.1",
+    "run": "^1.4.0",
+    "start": "^5.1.0",
+    "tag": "^0.4.17",
+    "test": "^0.6.0",
+    "upgrade": "^1.1.0",
+    "versions": "^8.4.4",
+    "workspaces": "^0.1.0"
   },
-  "description": "The frontend wallet application built with React/Redux.",
-  "keywords": [
-    "blockchain",
-    "blockchain.info",
-    "blockchain.com",
-    "react",
-    "redux",
-    "wallet"
-  ],
-  "engines": {
-    "node": ">= 10.15",
-    "yarn": ">= 1.13"
-  },
-  "workspaces": [
-    "packages/*"
-  ],
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged && node ./scripts/commitHook.js",
-      "pre-push": "yarn test"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "*.{js,tsx}": [
-      "stylelint './packages/*/src/**/*.{js,tsx}'"
-    ],
-    "*.json": [
-      "prettier --write",
-      "git add"
-    ]
-  },
+  "devDependencies": {},
   "scripts": {
-    "analyze": "yarn workspace blockchain-wallet-v4-frontend analyze",
-    "build": "yarn workspace blockchain-wallet-v4-frontend build:dev",
-    "build:prod": "yarn workspace blockchain-wallet-v4-frontend build:prod",
-    "ci:compile": "yarn workspace blockchain-wallet-v4-frontend ci:compile",
-    "ci:lint": "prettier './packages/*/src/**/*.{js,ts,tsx}' --loglevel error --write && eslint './packages/*/src/**/*.{js,ts,tsx}' --fix && stylelint './packages/*/src/**/*.{js,tsx}'",
-    "ci:test:build": "yarn wsrun --serial test:build",
-    "ci:test:core:components": "yarn wsrun --serial --exclude-missing ci:test",
-    "ci:test:frontend": "yarn workspace blockchain-wallet-v4-frontend ci:test:frontend",
-    "clean": "cross-env yarn wsrun clean && rimraf build && rimraf coverage && rimraf dist && rimraf *.log && rimraf node_modules",
-    "coverage": "cross-env rimraf coverage && yarn wsrun coverage && yarn run report",
-    "coverage:components": "cross-env rimraf coverage && yarn workspace blockchain-info-components coverage && yarn run report",
-    "coverage:core": "cross-env rimraf coverage && yarn workspace blockchain-wallet-v4 coverage && yarn run report",
-    "coverage:frontend": "cross-env rimraf coverage && yarn workspace blockchain-wallet-v4-frontend coverage && yarn run report",
-    "debug:prod": "yarn workspace blockchain-wallet-v4-frontend debug:prod",
-    "fix": "cross-env yarn prettier && yarn lint:fix && yarn test:components:update && yarn test:frontend:update",
-    "link:resolved:paths": "yarn wsrun --exclude-missing link:resolved:paths",
-    "lint": "eslint --cache './packages/*/src/**/*.{js,ts,tsx}'",
-    "lint:components": "eslint './packages/blockchain-info-components/src/**/*.{js,ts,tsx}'",
-    "lint:core": "eslint './packages/blockchain-wallet-v4/src/**/*.{js,ts,tsx}'",
-    "lint:css": "stylelint './packages/*/src/**/*.{js,tsx}'",
-    "lint:fix": "eslint './packages/*/src/**/*.{js,ts,tsx}' --fix",
-    "lint:frontend": "eslint './packages/blockchain-wallet-v4-frontend/src/**/*.{js,ts,tsx}'",
-    "manage:translations": "yarn workspace blockchain-wallet-v4-frontend manage:translations",
-    "prettier": "prettier './packages/*/src/**/*.{js,ts,tsx}' --loglevel error --write",
-    "prettier:components": "prettier './packages/blockchain-info-components/src/**/*.{js,ts,tsx}' --list-different --loglevel error --write",
-    "prettier:core": "prettier './packages/blockchain-wallet-v4/src/**/*.{js,ts,tsx}' --list-different --loglevel error --write",
-    "prettier:frontend": "prettier './packages/blockchain-wallet-v4-frontend/src/**/*.{js,ts,tsx}' --list-different --loglevel error --write",
-    "report": "npx istanbul report --root ./coverage --dir ./coverage/ text-summary html",
-    "start": "yarn workspace blockchain-wallet-v4-frontend start:dev",
-    "start:dev": "yarn workspace blockchain-wallet-v4-frontend start:dev",
-    "start:prod": "yarn workspace blockchain-wallet-v4-frontend start:prod",
-    "start:staging": "yarn workspace blockchain-wallet-v4-frontend start:staging",
-    "start:testnet": "yarn workspace blockchain-wallet-v4-frontend start:testnet",
-    "storybook:build": "yarn workspace blockchain-info-components storybook:build",
-    "storybook:serve": "yarn workspace blockchain-info-components storybook:serve",
-    "storybook:deploy": "yarn workspace blockchain-info-components storybook:build && yarn workspace blockchain-info-components storybook:deploy",
-    "test": "cross-env yarn wsrun --serial test:build && yarn wsrun --serial test",
-    "test:components": "yarn workspace blockchain-info-components test",
-    "test:components:debug": "yarn workspace blockchain-info-components test:debug",
-    "test:components:update": "yarn workspace blockchain-info-components test:update",
-    "test:components:watch": "yarn workspace blockchain-info-components test:watch",
-    "test:core": "yarn workspace blockchain-wallet-v4 test",
-    "test:core:debug": "yarn workspace blockchain-wallet-v4 test:debug",
-    "test:core:watch": "yarn workspace blockchain-wallet-v4 test:watch",
-    "test:frontend": "yarn workspace blockchain-wallet-v4-frontend test",
-    "test:frontend:debug": "yarn workspace blockchain-wallet-v4-frontend test:debug",
-    "test:frontend:update": "yarn workspace blockchain-wallet-v4-frontend test:update",
-    "test:frontend:watch": "yarn workspace blockchain-wallet-v4-frontend test:watch",
-    "release": "release-it",
-    "vet": "yarn prettier && yarn lint:fix && yarn lint:css && yarn test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.9.0",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.9.5",
-    "@babel/polyfill": "7.8.7",
-    "@babel/preset-env": "7.9.5",
-    "@babel/preset-react": "7.9.4",
-    "@codechecks/client": "0.1.10",
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
-    "@storybook/addon-actions": "4.1.9",
-    "@storybook/addon-info": "4.1.9",
-    "@storybook/addon-links": "4.1.9",
-    "@storybook/cli": "4.1.9",
-    "@storybook/react": "4.1.9",
-    "@storybook/storybook-deployer": "2.8.1",
-    "@types/axios": "0.14.0",
-    "@types/jest": "22.2.3",
-    "@types/hoist-non-react-statics": "3.3.1",
-    "@types/moment": "2.13.0",
-    "@types/node": "13.9.0",
-    "@types/ramda": "0.26.39",
-    "@types/react": "16.9.34",
-    "@types/react-redux": "7.1.7",
-    "@types/redux": "3.6.0",
-    "@types/redux-form": "8.2.3",
-    "@types/styled-components": "4.0.3",
-    "@typescript-eslint/eslint-plugin": "2.28.0",
-    "@typescript-eslint/parser": "2.28.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "25.3.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-inline-react-svg": "1.1.1",
-    "babel-plugin-module-resolver": "4.0.0",
-    "babel-plugin-react-html-attrs": "2.1.0",
-    "babel-plugin-react-intl": "4.1.19",
-    "bs58": "4.0.1",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "chalk": "3.0.0",
-    "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "5.1.1",
-    "coveralls": "3.0.6",
-    "cross-env": "6.0.0",
-    "css-loader": "3.4.2",
-    "cz-conventional-changelog": "2.1.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "3.4.4",
-    "eslint": "5.16.0",
-    "eslint-config-prettier": "6.1.0",
-    "eslint-config-standard": "12.0.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "2.17.2",
-    "eslint-plugin-jest": "23.8.2",
-    "eslint-plugin-json": "1.4.0",
-    "eslint-plugin-node": "9.0.1",
-    "eslint-plugin-react": "7.13.0",
-    "eslint-plugin-sort-imports-es6-autofix": "0.5.0",
-    "eslint-plugin-standard": "4.0.0",
-    "eslint-plugin-typescript-sort-keys": "0.5.0",
-    "express": "4.17.1",
-    "favicons-webpack-plugin": "3.0.1",
-    "file-loader": "6.0.0",
-    "generate-changelog": "1.8.0",
-    "hoist-non-react-statics": "3.3.2",
-    "html-replace-webpack-plugin": "2.5.6",
-    "html-webpack-plugin": "4.0.3",
-    "husky": "3.0.5",
-    "identity-obj-proxy": "3.0.0",
-    "istanbul": "0.4.5",
-    "jest": "25.3.0",
-    "jest-cli": "25.3.0",
-    "jest-css-modules": "2.1.0",
-    "jest-fetch-mock": "3.0.3",
-    "lint-staged": "9.4.0",
-    "mock-socket": "8.0.5",
-    "prettier": "1.19.1",
-    "react-hot-loader": "4.12.20",
-    "react-intl-translations-manager": "5.0.3",
-    "redux-mock-store": "1.5.3",
-    "redux-saga-test-plan": "4.0.0-rc.3",
-    "release-it": "12.4.1",
-    "rimraf": "3.0.0",
-    "staged-git-files": "1.2.0",
-    "standard": "12.0.1",
-    "style-loader": "1.1.3",
-    "stylelint": "10.0.1",
-    "stylelint-config-recommended": "2.2.0",
-    "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.7.0",
-    "terser-webpack-plugin": "2.3.5",
-    "thread-loader": "2.1.3",
-    "ts-jest": "25.3.1",
-    "ts-loader": "6.2.2",
-    "typecov": "0.2.1",
-    "typescript": "3.8.3",
-    "webpack": "4.42.1",
-    "webpack-bundle-analyzer": "3.6.1",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3",
-    "wsrun": "5.0.2"
-  }
+  "repository": "git+https://github.com/rude9/blockchain-wallet-v4-frontend.git",
+  "author": "rude9 <rudeboy.high@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rude9/blockchain-wallet-v4-frontend/issues"
+  },
+  "homepage": "https://github.com/rude9/blockchain-wallet-v4-frontend#readme",
+  "private": true
 }
